--- a/5_5mC.md
+++ b/5_5mC.md
@@ -1,14 +1,20 @@
-#####概要#####
-1:ツールのインストール
-2:ベースコーリング
-3:bedファイルの作成
-4:メチル化率の計算
-5:図作成
- 5.1:TE別、region別のメチル化率
- 5.2:conseved gene, other geneのメチル化率
- 5.3:メチル化率と発現量の散布図
+# 5_5mC
 
-#####1:ツールのインストール#####
+This document describes a minimal workflow to run **metylation analysis**.
+
+
+## Overview
+1. Tool installation
+2. Basecalling
+3. Generating BED files
+4. Calculating DNA methylation levels
+5. Figure generation
+ 5.1 Methylation levels by TE class and genomic region
+ 5.2 Methylation levels of conserved genes vs. other genes
+ 5.3 Scatter plot of methylation level vs. gene expression
+
+## 1. Tool installation
+```bash
 cd 5mC_wd
 conda activate ntLink
 
@@ -23,9 +29,10 @@ conda install -c bioconda bedtools
 #modkitのインストール
 wget https://github.com/nanoporetech/modkit/releases/download/v0.6.0/modkit_v0.6.0_u16_x86_64.tar.gz
 tar -xzvf modkit_v0.6.0_u16_x86_64.tar.gz
+```
 
-
-#####2:ベースコーリング#####
+## 2. Basecalling
+```bash
 dorado download --model dna_r9.4.1_e8_sup@v3.3
 
 dorado basecaller dna_r9.4.1_e8_sup@v3.3 \
@@ -51,8 +58,10 @@ samtools index  ./sorted_dorado_basecalling.bam
  C     h     42697       0.021737438  84901      0.03894727
  C     m     379122      0.19301452   442065     0.20279178
 #修飾確率0.734375以上で5mCと判定される。
+```
 
-#####3:bedファイルの作成#####
+## 3. Generating BED files
+```bash
 #exon, intron, gene, promoter, intergenic, repeatのbedファイル作成
 #intronの復元
 gtf2bed < jnig15_withGENE_withCodons.gtf > uc.FINAL.bed
@@ -82,9 +91,10 @@ rm in.bed plus.bed minus.bed plus.complement.3col.bed minus.complement.3col.bed 
 
 #repeat配列のbed
 cp /data2/nojiri/earlgrey_wd/JNIGearlGreyOutputs/JNIG_EarlGrey/JNIG_summaryFiles/JNIG.filteredRepeats.bed ./
+```
 
-
-#####4:メチル化率の計算#####
+## 4. Calculating DNA methylation levels
+```bash
 ./dist_modkit_v0.6.0_68b540b/modkit pileup --cpg --ref ./uc.FINAL.fasta --modified-bases 5mC --threads 100 ./sorted_dorado_basecalling.bam ./dorado_modkit.bed
 sort -k1,1 -k2,2n ./dorado_modkit.bed > dorado_modkit.sorted.bed
 bgzip -c dorado_modkit.sorted.bed > dorado_modkit.bed.gz
@@ -121,10 +131,11 @@ tabix -p bed dorado_modkit.bed.gz
   --mod-codes m
 
 awk '$8 >= 60 {print $4}' 5mC_in_gene.tsv > methylated_gene.txt
+```
 
-
-#####5:図作成#####
-#####5.1:TE別、region別のメチル化率#####
+## 5. Figure generation
+### 5.1 Methylation levels by TE class and genomic region
+```python
 python3
 #violin plot by TE category
 import pandas as pd
@@ -298,9 +309,10 @@ summary = (df.groupby("name")["percent_m"].describe(percentiles=[0.25, 0.5, 0.75
 0        gene  28515.0  28.514044  32.514399  0.0  1.596590  3.956835  64.974423   97.05882
 1  intergenic  26222.0  14.214935  22.268003  0.0  1.702943  2.823317  16.703125  100.00000
 2    promoter  22390.0  13.747067  26.287772  0.0  1.372998  1.940447   4.099936  100.00000
+```
 
-
-#####5.2:conseved gene, other geneのメチル化率#####
+## 5.2 Methylation levels of conserved genes vs. other genes
+```python
 python3
 import matplotlib.pyplot as plt
 import numpy as np
@@ -364,9 +376,10 @@ for patch, color in zip(bp['boxes'], colors):
 plt.ylabel("expression level")
 plt.tight_layout()
 plt.savefig("expression_level_by_conserved_other.svg")
+```
 
-
-#####5.3:メチル化率と発現量の散布図#####
+##  5.3 Scatter plot of methylation level vs. gene expression
+```python
 #gene分のみ
 
 import pandas as pd
@@ -421,7 +434,6 @@ plt.xlabel("percent_m (%)")
 plt.ylabel("logTPM")
 plt.tight_layout()
 plt.savefig("percent_m_logTPM_correlation_conserved_other.svg")
-
-
+```
 
 
