--- a/6_5mC.md
+++ b/6_5mC.md
@@ -1,7 +1,5 @@
 # 6_5mC
-
-This document describes a minimal workflow to run **metylation analysis**.
-
+This document describes the script used to generate Fig. 3A–F and Supp Fig. 3.
 
 ## Overview
 1. Tool installation
@@ -17,16 +15,14 @@ This document describes a minimal workflow to run **metylation analysis**.
 ```bash
 cd 5mC_wd
 conda activate ntLink
-
-#bedファイル作成用ツールのインストール
 conda install -c bioconda bedops
 conda install -c bioconda bedtools
 
-#doradoは金先生がダウンロードしたもの(?)がパスが通っていて使えたので、そのまま使用しており自分ではダウンロードしていません。
+#Download the official Dorado binary.
 #dorado -v
 #0.7.1
 
-#modkitのインストール
+#install modkit
 wget https://github.com/nanoporetech/modkit/releases/download/v0.6.0/modkit_v0.6.0_u16_x86_64.tar.gz
 tar -xzvf modkit_v0.6.0_u16_x86_64.tar.gz
 ```
@@ -44,7 +40,7 @@ dorado basecaller dna_r9.4.1_e8_sup@v3.3 \
 samtools sort -@ 100 -m 10G ./dorado_basecalling.bam -o ./sorted_dorado_basecalling.bam
 samtools index  ./sorted_dorado_basecalling.bam
 
-#メモ：basecallingのサマリー#
+#Note: summry of basecalling
 ./dist_modkit_v0.6.0_68b540b/modkit summary ./sorted_dorado_basecalling.bam
 > sampling 10042 reads from BAM
 > calculating threshold at 10(th) percentile
@@ -57,7 +53,6 @@ samtools index  ./sorted_dorado_basecalling.bam
  C     -     1542396     0.78524804   1652930    0.75826097
  C     h     42697       0.021737438  84901      0.03894727
  C     m     379122      0.19301452   442065     0.20279178
-#修飾確率0.734375以上で5mCと判定される。
 ```
 
 ## 3. Generating BED files
@@ -71,13 +66,14 @@ awk '$8=="gene"   {OFS="\t"; print $1,$2,$3,$4,$5,$6}' uc.FINAL.bed > gene.bed
 awk '$8=="exon"   {OFS="\t"; print $1,$2,$3,$4,$5,$6}' uc.FINAL.bed > exon.bed
 awk '$8=="intron" {OFS="\t"; print $1,$2,$3,$4,$5,$6}' uc.FINAL.bed > intron.bed
 
-# promoter（両鎖の5' upstream 2kb）のbed作成
+# Create a BED file of promoters (2 kb upstream of the 5′ end on both strands)
+
 samtools faidx uc.FINAL.fasta
 bedtools flank -i gene.bed -g uc.FINAL.fasta.fai -l 2000 -r 0 -s \
   | bedtools intersect -a - -b gene.bed -s -v \
   > promoter.bed
 
-# intergenic(exon, intron, promoter, gene以外の領域)のbed作成
+# Create a BED file of intergenic regions (excluding exons, introns, promoters, and genes)
 cut -f1,2 uc.FINAL.fasta.fai | sort -k1,1 > genome.sizes
 cat exon.bed intron.bed promoter.bed gene.bed > in.bed
 awk '$6=="+"' in.bed | cut -f1-3 | bedtools sort -i - | bedtools merge -i - > plus.bed
@@ -89,7 +85,7 @@ awk 'BEGIN{OFS="\t"}{print $1,$2,$3,".",".","-"}' minus.complement.3col.bed > mi
 cat plus.complement.bed minus.complement.bed | bedtools sort -i - > intergenic.bed
 rm in.bed plus.bed minus.bed plus.complement.3col.bed minus.complement.3col.bed plus.complement.bed minus.complement.bed
 
-#repeat配列のbed
+# BED file of repeat sequences
 cp /data2/nojiri/earlgrey_wd/JNIGearlGreyOutputs/JNIG_EarlGrey/JNIG_summaryFiles/JNIG.filteredRepeats.bed ./
 ```
 
@@ -145,7 +141,7 @@ import seaborn as sns
 
 df = pd.read_csv("5mC_in_repeat.tsv", sep="\t")
 
-#メモ：TEのアノテーション名#
+# Note: Annotation names for each transposable element#
 >>> df["name"].unique()
 array(['Unknown', 'Simple_repeat', 'LINE/Penelope', 'Low_complexity',
        'DNA/CMC-Transib', 'LINE/L2', 'DNA/CMC-EnSpm', 'DNA/hAT-hATm',
@@ -170,7 +166,7 @@ array(['Unknown', 'Simple_repeat', 'LINE/Penelope', 'Low_complexity',
 
 df = df[df["name"] != "Other/DNA_virus"]
 
-# カテゴリ分け   
+# Categorization
 def assign_category(name):
     if "DNA" in name:
         return "DNA"
@@ -193,11 +189,11 @@ def assign_category(name):
 
 df["category"] = df["name"].apply(assign_category)
 
-# 並び順
+# Order
 order = ["DNA", "RC", "LINE", "LTR", "PLE"]
 
 
-#配色
+# Color scheme
 base_palette = {"DNA": "#d94454", "RC": "#f2922c", "LINE": "#43b9a6", "LTR": "#53a550", "PLE": "#e7b540"}
 palette = [base_palette[c] for c in order]
 
@@ -219,7 +215,7 @@ ax.spines[['top', 'right']].set_visible(False)
 plt.tight_layout()
 plt.savefig("boxplot_percent_m_by_TE_category.svg", format="svg", bbox_inches="tight")
 
-#メモ：カテゴリ別TEメチル化率#
+# Note: TE methylation levels by category
 summary = (df.groupby("category")["percent_m"].describe(percentiles=[0.25, 0.5, 0.75]).reset_index())
 >>> summary
          category     count       mean        std  min       25%       50%        75%    max
@@ -233,15 +229,14 @@ summary = (df.groupby("category")["percent_m"].describe(percentiles=[0.25, 0.5, 
 7   Simple_repeat  347283.0   2.218450  13.071044  0.0  0.000000  0.000000   0.000000  100.0
 8         Unknown  504751.0  23.833136  35.959754  0.0  0.000000  1.612903  69.090910  100.0
 
-
-#exon, intronのメチル化率
+#methylation level of exons and introns
 df1 = pd.read_csv("5mC_in_exon.tsv", sep="\t")
 df1["name"] = "exon"
 df2 = pd.read_csv("5mC_in_intron.tsv", sep="\t")
 df2["name"] = "intron"
 df = pd.concat([df1, df2], axis=0, ignore_index=True)
 
-# 並び順
+# Order
 order = ["exon", "intron"]
 
 #violinplot
@@ -263,7 +258,7 @@ plt.tight_layout()
 plt.savefig("boxplot_percent_m_by_exon_intron.svg", format="svg", bbox_inches="tight")
 
 
-#メモ：exon, intronメチル化率#
+#Note: methylation level of exons and introns
 summary = (df.groupby("name")["percent_m"].describe(percentiles=[0.25, 0.5, 0.75]).reset_index())
 >>> summary
      name     count       mean        std  min  25%        50%        75%    max
@@ -271,7 +266,7 @@ summary = (df.groupby("name")["percent_m"].describe(percentiles=[0.25, 0.5, 0.75
 1  intron  177854.0  37.340849  38.030733  0.0  0.0  13.968653  79.896910  100.0
 
 
-#promoter, gene, intergenicのメチル化率
+#methylation level of promoter, gene and intergenic regions.
 df3 = pd.read_csv("5mC_in_promoter.tsv", sep="\t")
 df3["name"] = "promoter"
 df4 = pd.read_csv("5mC_in_gene.tsv", sep="\t")
@@ -280,7 +275,7 @@ df5 = pd.read_csv("5mC_in_intergenic.tsv", sep="\t")
 df5["name"] = "intergenic"
 df = pd.concat([df3, df4, df5], axis=0, ignore_index=True)
 
-# 並び順
+# Order
 order = ["promoter", "intergenic", "gene"]
 
 #violinplot
@@ -302,7 +297,7 @@ plt.tight_layout()
 plt.savefig("boxplot_percent_m_by_gene_intergenic_promoter.svg", format="svg", bbox_inches="tight")
 
 
-#メモ：exon, intronメチル化率#
+#Note: methylation level of exons and introns
 summary = (df.groupby("name")["percent_m"].describe(percentiles=[0.25, 0.5, 0.75]).reset_index())
 >>> summary
          name    count       mean        std  min       25%       50%        75%        max
@@ -323,21 +318,22 @@ import re
 file = pd.read_csv("5mC_in_gene.tsv", sep="\t")
 expr = pd.read_csv("/data2/Hydra_RNA_seq_DATA_GeneBay_2022-01-45-01-1_2022-3-10/analysis/cont.genes.results", sep="\t")
 expr["logTPM"] = np.log10(expr["TPM"] + 1)
-#file_x_file_y_を削除する
+#deleate "file_x_file_y_"
 expr["gene_id"] = expr["gene_id"].str.replace(r"^file_\d+_file_\d+_", "", regex=True)
 
-# 保存された遺伝子リストの読み込み
-#all_common_og_lists.txt：orthofinderの出力から33種が共通して保有するオルソグループのJNIG IDを記載したファイル
+# Load the saved gene list
+# all_common_og_lists.txt: a file containing JNIG IDs of orthogroups conserved across 33 species, derived from OrthoFinder output
+
 common_og_lists = pd.read_csv("all_common_og_lists.txt", header=None)[0].tolist() 
-#file_x_file_y_を削除する
+#deleate "file_x_file_y_"
 common_og_lists = [re.sub(r"^file_\d+_file_\d+_", "", x)  for x in common_og_lists]
 
-# name と gene_id で結合
+# Merge by name and gene_id
 merged = pd.merge(file, expr[["gene_id", "logTPM"]], left_on="name", right_on="gene_id", how="left")
 df = merged.dropna(subset=["percent_m", "logTPM"])
 df["highlight"] = df["name"].isin(common_og_lists)
 
-#メモ：conserved vs other genes でメチル化率は有意に異なるか
+# Note: Is the methylation level significantly different between conserved and other genes?
 group1 = df.loc[df["highlight"] == True, "percent_m"]
 group2 = df.loc[df["highlight"] == False, "percent_m"]
 stat, p = mannwhitneyu(group1, group2, alternative='two-sided')
@@ -350,14 +346,14 @@ labels = ["Other genes", "Conserved genes"]
 colors = ["#b5b6b6", "#920783"] 
 plt.figure(figsize=(5,5))
 bp = plt.boxplot(data, patch_artist=True, labels=labels, boxprops=dict(linewidth=0.3), medianprops=dict(color='black', linewidth=2), whiskerprops=dict(linewidth=0.3), capprops=dict(linewidth=0.3))
-# box に色をつける
+# Color the boxes
 for patch, color in zip(bp['boxes'], colors):
     patch.set_facecolor(color)
 plt.ylabel("Methylation level")
 plt.tight_layout()
 plt.savefig("Methylation_level_by_conserved_other.svg")
 
-#メモ：conserved vs other genes で発現量は有意に異なるか#
+# Note: Is gene expression significantly different between conserved and other genes?
 group1 = df.loc[df["highlight"] == True, "logTPM"]
 group2 = df.loc[df["highlight"] == False, "logTPM"]
 stat, p = mannwhitneyu(group1, group2, alternative='two-sided')
@@ -370,7 +366,7 @@ labels = ["Other genes", "Conserved genes"]
 colors = ["#b5b6b6", "#920783"] 
 plt.figure(figsize=(3,5))
 bp = plt.boxplot(data, patch_artist=True, labels=labels, boxprops=dict(linewidth=0.3), medianprops=dict(color='black', linewidth=2), whiskerprops=dict(linewidth=0.3), capprops=dict(linewidth=0.3))
-# box に色をつける
+# Color the boxes
 for patch, color in zip(bp['boxes'], colors):
     patch.set_facecolor(color)
 plt.ylabel("expression level")
@@ -380,8 +376,6 @@ plt.savefig("expression_level_by_conserved_other.svg")
 
 ##  5.3 Scatter plot of methylation level vs. gene expression
 ```python
-#gene分のみ
-
 import pandas as pd
 import numpy as np
 import matplotlib.pyplot as plt
@@ -390,26 +384,28 @@ file = pd.read_csv("5mC_in_gene.tsv", sep="\t")
 file["name"] = file["name"].str.extract(r"gene_id=([^;]+)")
 expr = pd.read_csv("/data2/Hydra_RNA_seq_DATA_GeneBay_2022-01-45-01-1_2022-3-10/analysis/cont.genes.results", sep="\t")
 expr["logTPM"] = np.log10(expr["TPM"] + 1)
-#file_x_file_y_を削除する
+#deleate "file_x_file_y_"
 expr["gene_id"] = expr["gene_id"].str.replace(r"^file_\d+_file_\d+_", "", regex=True)
 
-# 保存された遺伝子リストの読み込み
-#all_common_og_lists.txt：orthofinderの出力から33種が共通して保有するオルソグループのJNIG IDを記載したファイル
+# Load the saved gene list
+# all_common_og_lists.txt: a file containing JNIG IDs of orthogroups conserved across 33 species, derived from OrthoFinder output
+
 common_og_lists = pd.read_csv("all_common_og_lists.txt", header=None)[0].tolist() 
-#file_x_file_y_を削除する
+#deleate file_x_file_y_
 common_og_lists = [re.sub(r"^file_\d+_file_\d+_", "", x)  for x in common_og_lists]
 
-# name と gene_id で結合
+# Merge by name and gene_id
 merged = pd.merge(file, expr[["gene_id", "logTPM"]], left_on="name", right_on="gene_id", how="left")
 df = merged.dropna(subset=["percent_m", "logTPM"])
 
-#メモ：(conserved / nonconserved) x (hypermethyl / hypomethyl) 4群のCVを計算#
+# Note: Calculate coefficients of variation (CVs) for four groups: (conserved/non-conserved)× (hypermethylated/hypomethylated)
+
 df["conserved_gene"] = df["name"].isin(common_og_lists).map({True: "conserved", False: "nonconserved"})
-# percent_m で2群（閾値:メチル化率60%）
+# Define two methylation groups based on percent_m (threshold: 60%)
 df["group_pm"] = np.where(df["percent_m"] >= 60, "hyper", "hypo")
-# 4群を作成
+# Create four groups by combining conservation status and methylation level
 df["group"] = df["group_pm"] + "_" + df["conserved_gene"]
-# CV（SD / Mean）を計算
+# Calculate the coefficient of variation (CV = SD / mean)
 cv_df = (df.groupby("group")["logTPM"].agg(["mean", "std"]).assign(CV=lambda x: x["std"] / x["mean"]))
 print(cv_df)
 >>> print(cv_df)
